Task-6: Some fixes and refactoring
